fix(#4284): improve scrollbar appearance in toast notifications

--- a/spring-boot-admin-server-ui/src/main/frontend/toast-theme.css
+++ b/spring-boot-admin-server-ui/src/main/frontend/toast-theme.css
@@ -4,3 +4,7 @@
   z-index: 100;
   padding: 4em 1em;
 }
+
+.v-toast__text {
+  overflow: hidden;
+}
